# stylegen

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  gemini.py  pyproject.toml  sgen.py
